--- a/qdamage-win32.cbp
+++ b/qdamage-win32.cbp
@@ -22,6 +22,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add option="-O3 -ffast-math -msse -msse2 -mfpmath=sse -march=native" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
